# dronut

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/dronut_controller/share/dronut_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dronut_description/lib/dronut_description/: move
log/: latest_build
src/dronut_controller/: CMakeLists.txt
src/dronut_controller/include/: birotor_drone_controller.hpp  frame_remapper.hpp  joy_to_cmd_vel_node.hpp
src/dronut_controller/launch/: drone.launch.py
src/dronut_controller/src/: BirotorDroneController.cpp  birotor_drone_controller.cpp  frame_remapper.cpp  joy_to_cmd_vel_node.cpp  main.cpp  trial_code.cpp  x1.cpp
src/dronut_description/: setup.cfg  setup.py
src/dronut_description/launch/: drone.launch.py
src/dronut_description/meshes/: part_10.part  part_14.stl  part_16.part  part_17.stl  part_18.part  part_19.part  part_5.part  part_6.part
src/dronut_description/urdf/: x1.gazebo.xacro  x1.urdf.xacro
src/dronut_w_cam/: package.xml  setup.cfg  setup.py
src/dronut_w_cam/launch/: drone.launch.py  drone_sim.launch.py
src/dronut_w_cam/meshes/: part_1.part  part_10.stl  part_11.part  part_12.part  part_13.part  part_14.part  part_15.part  part_17.part  part_2.part  part_3.part  part_3.stl  part_4.part  part_6.stl  part_7.part  part_8.part  part_8.stl  part_9.part
src/dronut_w_cam/rviz/: x1_view.rviz
src/dronut_w_cam/urdf/: x1.urdf.xacro
src/joy_test/: CMakeLists.txt
src/joy_test/launch/: drone.launch.py
src/joy_test/src/: joy.cpp
(+53 files in other folders)
